--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,10 +2,10 @@ spring.application.name=ProperSell
 
 server.port=9090
 
-spring.datasource.url: jdbc:h2:mem:entidades
-spring.datasource.driverClassName: org.h2.Driver
-spring.datasource.username: sa
-spring.datasource.password: sa
+#spring.datasource.url: jdbc:h2:mem:entidades
+#spring.datasource.driverClassName: org.h2.Driver
+#spring.datasource.username: sa
+#spring.datasource.password: sa
 
 spring.jpa.properties.hibernate.use_sql_comments=true
 spring.jpa.defer-datasource-initialization=true
@@ -21,9 +21,9 @@ security.jwt.expiration-time=3600000
 
 
 
-#spring.datasource.url=jdbc:mysql://localhost:3306/propersell?useUnicode=true&characterEncodingutf8&createDatabaseIfNotExists
-#spring.datasource.username=root
-#spring.datasource.password=root
+spring.datasource.url=jdbc:mysql://localhost:3306/propersell?useUnicode=true&characterEncodingutf8&createDatabaseIfNotExists
+spring.datasource.username=root
+spring.datasource.password=root
 spring.jpa.hibernate.ddl-auto=update
-#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-#spring.output.ansi.enabled=always
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.output.ansi.enabled=always
