--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,8 +22,8 @@ security.jwt.expiration-time=3600000000
 
 
 spring.datasource.url=jdbc:mysql://localhost:3306/propersell?useUnicode=true&characterEncodingutf8&createDatabaseIfNotExists
-spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.username=sergio
+spring.datasource.password=20043
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.format_sql=true
