Añadiendo superficie a las propiedades

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,7 +17,7 @@ spring.sql.init.mode=always
 
 
 # 1h in millisecond
-security.jwt.expiration-time=3600000000
+security.jwt.expiration-time=3600000
 
 
 
