--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,9 +21,12 @@ security.jwt.expiration-time=3600000
 
 
 
-spring.datasource.url=jdbc:mysql://localhost:3306/propersell?useUnicode=true&characterEncodingutf8&createDatabaseIfNotExists
+spring.datasource.url=jdbc:mysql://localhost:3306/propersell?useUnicode=true&characterEncoding=utf8&createDatabaseIfNotExists
 spring.datasource.username=sergio
 spring.datasource.password=2004
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.format_sql=true
+spring.http.encoding.charset=UTF-8
+spring.http.encoding.enabled=true
+spring.http.encoding.force=true
